src/test/deca/context/valid/provided/test_conv_Float.deca
{
    int i;
    float f;
    f=f+i;
}