src/test/deca/context/invalid/provided/variable-deja-declare.deca
{
    int a = 4;
    float a = 2.5;
}